<resources>
    <string name="conversation_style">bubble</string>
    <string name="prefDefault_ringtone_repeat">1</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="confirm_delete_all_SIM_messages">Delete all SIM messages?</string>
    <string name="confirm_delete_SIM_message">Delete this SIM message?</string>
    <string name="sim_manage_messages_title">Text messages on SIM card</string>
    <string name="sim_empty">No messages on SIM card</string>
    <string name="sim_full_title">SIM card full</string>
    <string name="save_to_sim">Save to SIM card</string>
    <string name="app_label">Messaging</string>
    <string name="new_message">Compose</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="refreshing">Refreshing…</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_message_details">View details</string>
    <string name="delete_message">Delete</string>
    <string name="expire_on">Expires: %s</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">"Couldn't send this message.
Attempt made: %s."</string>
    <string name="undelivered_sms_dialog_body">"Couldn't send this message."</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy</string>
    <string name="copy_message_text_success">Copy text done</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide (after)</string>
    <string name="add_slide_hint">Touch to create new slide</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="slide_show_part">Part %1$s/%2$s</string>
    <string name="select_copy_text">select and copy message text</string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="subject_hint">Subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="mms">MMS</string>
    <string name="type_to_compose_text_enter_to_send">Type message</string>
    <string name="compressing">Picture is too large. Compressing…</string>
    <string name="unsupported_media_format">Unsupported %1$s format.</string>
    <string name="select_different_media">Choose a different %1$s.</string>
    <string name="exceed_message_size_limitation">Message size limit reached.</string>
    <string name="exceed_message_text_limitation">Message text length limit reached.</string>
    <string name="exceed_message_size_limitation_add_slide">Message size is not enough to add a slide</string>
    <string name="message_too_big_for_video">The message is too big to attach a video.</string>
    <string name="failed_to_add_media">"You can't add this %1$s to your message."</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="resize_image_error_information">This picture is too large to send, even when resized.</string>
    <string name="forward_prefix">"Fwd: "</string>
    <string name="discard_message">Discard</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="has_invalid_recipient">Invalid recipients: &lt;%1$s></string>
    <string name="invalid_destination">Invalid destination address.</string>
    <string name="service_not_activated">Service not activated on network</string>
    <string name="service_message_not_found">Message expired or unavailable</string>
    <string name="service_network_problem">"Couldn't send due to network problem"</string>
    <string name="invalid_recipient_message">"Correct the recipients or they won't receive the message."</string>
    <string name="cannot_send_message">"Can't send message"</string>
    <string name="cannot_send_message_reason">Your message has no valid recipients.</string>
    <string name="cannot_forward_drm_obj">"The DRM object included in the message can't be forwarded."</string>
    <string name="converting_to_picture_message">Converting to multimedia message…</string>
    <string name="converting_to_text_message">Converting to text message…</string>
    <string name="cannot_add_slide_anymore">"Can't add more slides."</string>
    <string name="cannot_add_picture_and_video">"Can't add video and picture to one slide."</string>
    <string name="message_saved_as_draft">Message saved as draft.</string>
    <string name="too_many_recipients">"Message has too many recipients (%1$s). You can't have more than %2$s recipients."</string>
    <string name="too_many_attachments">"Can't exceed %1$s attachments. Only the first %2$s will be added."</string>
    <string name="adding_attachments_title">Adding attachments</string>
    <string name="adding_attachments">Wait while the items are added to the slideshow.</string>
    <string name="recipients_over_size">Too many recipients.</string>
    <string name="over_max_mms_size">MMS is too big.</string>
    <string name="preview">Preview</string>
    <string name="preview_slideshow">Preview</string>
    <string name="replace_image">Replace picture</string>
    <string name="duration_sec">Duration (%s sec)</string>
    <string name="duration_selector_title">"Duration for slide "</string>
    <string name="layout_selector_title">"Slideshow layout "</string>
    <string name="type_to_compose_text_or_leave_blank">Type message, or leave blank</string>
    <string name="duration_not_a_number">Duration must be a number</string>
    <string name="duration_zero">Duration must be greater than 0 seconds</string>
    <string name="secs">secs</string>
    <string name="menu_view_contact">View contact</string>
    <string name="hidden_sender_address">Hidden sender address</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="set">Set</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="try_to_send">Try to send</string>
    <string name="preferences_title">Settings</string>
    <string name="pref_notification_settings_title">Notifications</string>
    <string name="pref_mms_settings_title">Multimedia (MMS) messages</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_delete_limit">%1$s messages per conversation</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="menu_lock">Star</string>
    <string name="menu_unlock">Unstar</string>
    <string name="copy_to_sdcard">Save attachment</string>
    <string name="resent_message">Resend</string>
    <string name="nosend_message">"Don't send"</string>
    <string name="pref_sms_theme_title">Display</string>
    <string name="pref_time_auto_group_title">Group by time</string>
    <string name="pref_time_auto_group_summary">Group messages that are received within a minute of each other into the same thread</string>
    <string name="pref_title_notification_body_enabled">Show messages on lock screen</string>
    <string name="pref_summary_notification_body_enabled">Show messages on the lock screen and in the notification shade</string>
    <string name="pref_title_delivery_reports">Delivery status</string>
    <string name="pref_summary_delivery_reports">Show delivery status for sent messages</string>
    <string name="pref_title_send_delivery_reports">Send delivery messages</string>
    <string name="pref_summary_send_delivery_reports">Send delivery confirmation message to sender when you receive a multimedia message</string>
    <string name="pref_title_ringtone_repeat">Notification sounds</string>
    <string name="pref_other_title">Additional settings</string>
    <string name="pref_advanced_settings_title">Additional settings</string>
    <string name="pref_title_show_recent_contacts">Show recent contacts</string>
    <string name="pref_summary_show_recent_contacts">Show recent contacts when composing a new message</string>
    <string name="pref_message_recovery_introduction_title">Recover message</string>
    <string name="timed_message_expired_title_2">Send them now?</string>
    <string name="title_date_type">Timestamp</string>
    <string name="mx_msg">Mi Message</string>
    <string name="mx_enable">Mi Message</string>
    <string name="mx_on_sim_1">Mi Message SIM slot 1</string>
    <string name="mx_on_sim_2">Mi Message SIM slot 2</string>
    <string name="mx_dspt">Send messages to other MIUI users without incurring charges</string>
    <string name="mx_current_status">Data usage settings</string>
    <string name="mx_auto_resend_sms">Send as SMS</string>
    <string name="mx_auto_resend_sms_summary">"Send messages as SMS over mobile data connection when you're not connected to WLAN. You will incur regular charges from your carrier."</string>
    <string name="mx_auto_resend_mms">Send as MMS</string>
    <string name="mx_auto_resend_mms_summary">"Send multimedia messages as MMS over mobile data connection when you're not connected to WLAN. You will incur regular charges from your carrier."</string>
    <string name="found_wild_messages_title">Sync messages from Mi Cloud</string>
    <string name="prvate_contact">Private contacts</string>
    <string name="private_protect">Passwords</string>
    <string name="private_new_notification">Message notifications</string>
    <string name="enable_password_protect">Require password</string>
    <string name="enable_visible_pattern_title">Make pattern visible</string>
    <string name="title_collapse_sp_messages">Group carrier messages</string>
    <string name="pref_collapse_sp_messages_summary">Group notifications from your carrier into the same thread</string>
    <string name="title_show_sms_template">Check SMS for verification codes</string>
    <string name="pref_show_sms_template_summary">Automatically copy and fill in verification codes</string>
    <string name="title_show_sms_template_in">Check SMS for OTP</string>
    <string name="pref_show_sms_template_in_summary">Automatically detect one-time passwords in SMS messages</string>
    <string name="title_allow_network_access">Update info automatically</string>
    <string name="pref_allow_network_access_summary">Turn on to get the latest info on delivery and other services.</string>
    <string name="title_show_blocked_messages">Show blocked SMS</string>
    <string name="pref_show_blocked_messages_summary">Show blocked SMS in conversations list</string>
    <string name="pref_key_mx_feedback">Feedback</string>
    <string name="pref_summary_mx_feedback">Report bugs and send feedback</string>
    <string name="mx_filter_message_from_stranger">Block Mi Messages from unknown numbers</string>
    <string name="mx_filter_message_from_stranger_summary">"You'll still be able to receive regular SMS from unknown numbers"</string>
</resources>