<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/private_protect">
        <CheckBoxPreference android:persistent="false" android:title="@string/private_new_notification" android:key="pref_key_private_new_notification" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/enable_password_protect" android:key="pref_key_private_protect_usage" android:defaultValue="false" />
        <CheckBoxPreference android:persistent="false" android:title="@string/enable_visible_pattern_title" android:key="pref_key_private_protect_visible" android:dependency="pref_key_private_protect_usage" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prvate_contact" android:key="pref_key_private_contact_list" />
</PreferenceScreen>