<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.ImageAttachmentView android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/image_attachment_view" android:background="@drawable/attachment_editor_bg" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/image_content" android:layout_width="fill_parent" android:layout_height="135.0dip" android:layout_weight="1.0" />
    <LinearLayout android:orientation="vertical" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textColor="@android:color/black" android:id="@id/view_image_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/view" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="@android:color/black" android:id="@id/replace_image_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/replace" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="@android:color/black" android:id="@id/remove_image_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/remove" style="?android:attr/buttonStyleSmall" />
    </LinearLayout>
</com.android.mms.ui.ImageAttachmentView>