<?xml version="1.0" encoding="utf-8"?>
<com.android.mms.ui.VideoAttachmentView android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/video_attachment_view" android:background="@drawable/attachment_editor_bg" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ImageView android:id="@id/video_thumbnail" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitCenter" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_gallery_video_overlay" android:layout_centerInParent="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textColor="@android:color/black" android:id="@id/view_video_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/view" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="@android:color/black" android:id="@id/replace_video_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/replace" style="?android:attr/buttonStyleSmall" />
        <Button android:textColor="@android:color/black" android:id="@id/remove_video_button" android:layout_width="100.0dip" android:layout_height="45.0dip" android:text="@string/remove" style="?android:attr/buttonStyleSmall" />
    </LinearLayout>
</com.android.mms.ui.VideoAttachmentView>